--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.10.5",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "ngx-bootstrap": "^11.0.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
