--- a/Infraestructure/Data/SeedData/appointment.json
+++ b/Infraestructure/Data/SeedData/appointment.json
@@ -4,6 +4,7 @@
         "Date": "2023-08-20",
         "Time": "14:30:00",
         "Description": "Follow-up appointment",
+        "AppointmentStatusId": 1,
         "PatientId": 1
     },
     {
@@ -11,6 +12,7 @@
         "Date": "2023-08-22",
         "Time": "10:00:00",
         "Description": "Initial consultation",
+        "AppointmentStatusId": 1,
         "PatientId": 2
     },
     {
@@ -18,6 +20,7 @@
         "Date": "2023-08-29",
         "Time": "10:00:00",
         "Description": "Checkup appointment",
+        "AppointmentStatusId": 3,
         "PatientId": 2
     },
     {
@@ -25,6 +28,7 @@
         "Date": "2023-08-22T15:45:00",
         "Time": "15:45:00",
         "Description": "Consultation appointment",
+        "AppointmentStatusId": 2,
         "PatientId": 1
     },
     {
@@ -32,6 +36,7 @@
         "Date": "2023-08-20",
         "Time": "14:30:00",
         "Description": "Follow-up appointment",
+        "AppointmentStatusId": 3,
         "PatientId": 1
     },
     {
@@ -39,6 +44,7 @@
         "Date": "2023-08-21",
         "Time": "10:00:00",
         "Description": "Annual check-up",
+        "AppointmentStatusId": 1,
         "PatientId": 2
     },
     {
@@ -46,6 +52,7 @@
         "Date": "2023-08-22",
         "Time": "15:45:00",
         "Description": "Consultation",
+        "AppointmentStatusId": 3,
         "PatientId": 3
     },
     {
@@ -53,6 +60,7 @@
         "Date": "2023-08-23",
         "Time": "09:30:00",
         "Description": "Follow-up appointment",
+        "AppointmentStatusId": 3,
         "PatientId": 4
     },
     {
@@ -60,6 +68,7 @@
         "Date": "2023-08-24",
         "Time": "16:15:00",
         "Description": "Routine check-up",
+        "AppointmentStatusId": 3,
         "PatientId": 5
     },
     {
@@ -67,6 +76,7 @@
         "Date": "2023-08-25",
         "Time": "11:45:00",
         "Description": "Follow-up appointment",
+        "AppointmentStatusId": 2,
         "PatientId": 6
     },
     {
@@ -74,6 +84,7 @@
         "Date": "2023-08-28",
         "Time": "15:45:00",
         "Description": "Follow-up appointment",
+        "AppointmentStatusId": 1,
         "PatientId": 3
     },
     {
@@ -81,6 +92,8 @@
         "Date": "2023-08-29",
         "Time": "09:30:00",
         "Description": "Annual check-up",
+        "AppointmentStatusId": 1,
+
         "PatientId": 4
     },
     {
@@ -88,6 +101,7 @@
         "Date": "2023-08-30",
         "Time": "16:15:00",
         "Description": "Follow-up appointment",
+        "AppointmentStatusId": 1,
         "PatientId": 5
     }
     
