--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,10 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=heartmanagement.db"
+    "DefaultConnection": "Data source=heartmanagement.db",
+    "IdentityConnection": "Data source=identity.db"
+  },
+  "Token": {
+    "Key": "super secret key worth it to include more as it adds security to my app",
+    "Issuer": "https://localhost:5001"
   }
 }
